src/test/resources/de/cd4analysis/cocos/ebnf/invalid/CD4AC0005.cd
package de.cd4analysis.cocos;

classdiagram CD4AC0005 {
  interface i;
  class c;
  enum e;
}